--- a/src/Components/AmiiboCard/AmiiboCard.css
+++ b/src/Components/AmiiboCard/AmiiboCard.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    box-shadow: 0px 0px 3px;
+    box-shadow: 0px 0px 3px black;
     margin: 20px 10px;
 }
 
