--- a/src/Components/LoadingSpinner/LoadingSpinner.css
+++ b/src/Components/LoadingSpinner/LoadingSpinner.css
@@ -1,5 +1,5 @@
 .loadingSpinnerContainer {
-    position: fixed;
+    position: absolute;
     left: 50%;
     top: 50%;
     border: 16px solid #f3f3f3;
