--- a/src/Components/AmiiboCard/AmiiboCard.css
+++ b/src/Components/AmiiboCard/AmiiboCard.css
@@ -9,11 +9,13 @@
     justify-content: center;
     box-shadow: 0px 0px 3px black;
     margin: 20px 10px;
+    filter: saturate(4);
 }
 
 .amiiboCardImage {
     position: relative;
     height: 100%;
+    filter: saturate(0.25);
 }
 
 .amiiboCardTextContainer {
