--- a/src/Components/AmiiboDetails/AmiiboDetails.css
+++ b/src/Components/AmiiboDetails/AmiiboDetails.css
@@ -2,13 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
+    padding: 50px 0 22vh 0;
 }
 
 .amiiboDetailsBackground {
     position: absolute;
     height: 300px;
-    width: 100vw;
+    width: 100%;
     z-index: -1;
     filter: saturate(4);
 }
