--- a/src/Components/AmiiboLibrary/AmiiboLibrary.css
+++ b/src/Components/AmiiboLibrary/AmiiboLibrary.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 60px;
+    padding: 60px 0 20vh 0;
 }
 
 .amiiboLibraryCardsContainer {
