--- a/src/Components/AmiiboCard/AmiiboCard.css
+++ b/src/Components/AmiiboCard/AmiiboCard.css
@@ -8,7 +8,7 @@
     flex-direction: row;
     justify-content: center;
     box-shadow: 0px 0px 3px black;
-    margin: 20px 10px;
+    margin: 20px auto;
     filter: saturate(4);
 }
 
