--- a/src/Components/AmiiboLibrary/AmiiboLibrary.css
+++ b/src/Components/AmiiboLibrary/AmiiboLibrary.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     padding: 60px 0 20vh 0;
+    margin: 0px 20px;
 }
 
 .amiiboLibraryCardsContainer {
