--- a/src/Components/AmiiboLibrary/AmiiboLibrary.css
+++ b/src/Components/AmiiboLibrary/AmiiboLibrary.css
@@ -12,3 +12,11 @@
     justify-content: center;
     flex-wrap: wrap;
 }
+
+.amiiboLibraryDesktopControls {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
