--- a/src/Components/AmiiboCard/AmiiboCard.css
+++ b/src/Components/AmiiboCard/AmiiboCard.css
@@ -9,13 +9,17 @@
     justify-content: center;
     box-shadow: 0px 0px 3px black;
     margin: 20px auto;
-    filter: saturate(4);
+}
+.amiiboCardContentContainer {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .amiiboCardImage {
     position: relative;
     height: 100%;
-    filter: saturate(0.25);
 }
 
 .amiiboCardTextContainer {
@@ -38,4 +42,29 @@
     font-family: "Helvetica";
     font-size: 2vh;
     margin: 0;
+}
+
+.amiiboCardSelectedIcon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 1vh;
+    margin: 10px;
+    z-index: 1;
+}
+
+.amiiboCardAddIcon {
+    height: 5vh;
+    width: 5vh;
+    mask-image: url("../../Assets/add.svg");
+    background-color: #46FF00;
+    border: 1px solid black;
+}
+
+.amiiboCardDeleteIcon {
+    height: 5vh;
+    width: 5vh;
+    mask-image: url("../../Assets/delete.svg");
+    background-color: #FF0000;
+    border: 1px solid black;
 }
