--- a/src/Components/AmiiboLibrary/AmiiboLibrary.css
+++ b/src/Components/AmiiboLibrary/AmiiboLibrary.css
@@ -9,7 +9,8 @@
 .amiiboLibraryCardsContainer {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
+    width: 100%;
     flex-wrap: wrap;
 }
 
@@ -59,4 +60,8 @@
 }
 .amiiboLibraryConfirmChangesButton:hover {
     background: #D8F1FF;
+}
+
+.amiiboLibraryOwnershipCheckboxes {
+    margin: 5px;
 }
