--- a/src/Components/AmiiboDetails/AmiiboDetails.css
+++ b/src/Components/AmiiboDetails/AmiiboDetails.css
@@ -38,3 +38,12 @@
 .amiiboDetailsTextBoxContainer {
     margin-top: 5px;
 }
+
+.amiiboDetailsCollectionButton {
+    padding: 5px 10px 5px 10px;
+    border-radius: 8px;
+    border: 1px solid black;
+    cursor: pointer;
+    margin: 5px;
+    background: transparent;
+}
