--- a/src/Components/MobileNavBar/MobileNavBar.css
+++ b/src/Components/MobileNavBar/MobileNavBar.css
@@ -9,11 +9,20 @@
     left: 0;
     top: 0;
     border-radius: 0px 20px 20px 0px;
-    z-index: 3;
+    z-index: 10;
     overflow-x: hidden;
     transition: 0.5s;
     box-shadow: 1px 1px 3px;
     white-space: nowrap;
+}
+
+.mobileNavBarCloseZone {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    z-index: 9;
 }
 
 .mobileNavBarBar {
@@ -30,7 +39,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 4;
+    z-index: 11;
     margin: 10px;
 }
 
