Made clicking the header logo take you to the home page

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -19,6 +19,9 @@
     margin: 0 25px;;
     font-size: medium;
     justify-self: center;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
 }
 
 .headerSignInOrOut {
