--- a/src/Components/AmiiboCard/AmiiboCard.scss
+++ b/src/Components/AmiiboCard/AmiiboCard.scss
@@ -9,17 +9,30 @@
   justify-content: center;
   box-shadow: 0px 0px 3px black;
   margin: 20px auto;
+  box-sizing: border-box;
+
+  &.pending-add {
+    border: 2px solid #46ff00;
+  }
+
+  &.pending-remove {
+    border: 2px solid #ff0000;
+  }
 }
 .amiiboCardContentContainer {
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  // This is to make the background color more vibrant.
+  filter: saturate(4);
 }
 
 .amiiboCardImage {
   position: relative;
   height: 100%;
+  // This is to make the saturation of the image normal after the filter for the content container has been applied.
+  filter: saturate(0.25);
 }
 
 .amiiboCardTextContainer {
@@ -56,7 +69,7 @@
 .amiiboCardAddIcon {
   height: 5vh;
   width: 5vh;
-  mask-image: url("../../Assets/add.svg");
+  mask-image: url("../../assets/add.svg");
   background-color: #46ff00;
   border: 1px solid black;
 }
@@ -64,7 +77,7 @@
 .amiiboCardDeleteIcon {
   height: 5vh;
   width: 5vh;
-  mask-image: url("../../Assets/delete.svg");
+  mask-image: url("../../assets/delete.svg");
   background-color: #ff0000;
   border: 1px solid black;
 }
