--- a/src/Components/AmiiboLibrary/AmiiboLibrary.scss
+++ b/src/Components/AmiiboLibrary/AmiiboLibrary.scss
@@ -26,7 +26,7 @@
   margin: 5px;
   padding: 5px 10px 5px 25px;
   border-radius: 8px;
-  background: url("../../Assets/search_icon.svg") no-repeat 2% center;
+  background: url("../../assets/search_icon.svg") no-repeat 2% center;
   background-size: 18px;
   border: none;
   background-color: #eaeaea;
@@ -64,4 +64,12 @@
 
 .amiiboLibraryOwnershipCheckboxes {
   margin: 5px;
+}
+
+.collection-library {
+  .uncollected-card {
+    .amiiboCardContentContainer {
+      filter: saturate(0);
+    }
+  }
 }
