--- a/src/Components/MobileNavBar/MobileNavBar.scss
+++ b/src/Components/MobileNavBar/MobileNavBar.scss
@@ -73,7 +73,7 @@
 .mobileNavBarSearch {
   padding: 5px 10px 5px 25px;
   border-radius: 8px;
-  background: url("../../Assets/search_icon.svg") no-repeat 2% center;
+  background: url("../../assets/search_icon.svg") no-repeat 2% center;
   background-size: 18px;
   border: none;
   background-color: #eaeaea;
