--- a/src/Components/AmiiboDetails/AmiiboDetails.scss
+++ b/src/Components/AmiiboDetails/AmiiboDetails.scss
@@ -1,49 +1,50 @@
-.amiiboDetailsContainer {
+.AmiiboDetails {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 50px 0 22vh 0;
-}
 
-.amiiboDetailsBackground {
-  position: absolute;
-  height: 300px;
-  width: 100%;
-  z-index: -1;
-  filter: saturate(4);
-}
+  .background {
+    position: absolute;
+    height: 300px;
+    width: 100%;
+    z-index: -1;
+    filter: saturate(4);
+  }
 
-.amiiboDetailsNameHeader {
-  margin: 10px 0 0 0;
-}
+  .name-header {
+    margin: 10px 0 0 0;
+  }
 
-.amiiboDetailsSeriesHeader {
-  margin: 0 0 20px 0;
-}
+  .series-header {
+    margin: 0 0 20px 0;
+  }
 
-.amiiboDetailsDetails {
-  margin: 5px;
-}
+  .image {
+    margin-bottom: 10px;
+    max-height: 400px;
+  }
 
-.amiiboDetailsReleaseDates {
-  list-style-type: none;
-  margin: 5px;
-}
+  .detail {
+    margin: 5px;
+  }
 
-.amiiboDetailsImage {
-  margin-bottom: 10px;
-  max-height: 400px;
-}
+  .release-dates {
+    padding: 0;
+    list-style-type: none;
+    margin: 5px;
+  }
 
-.amiiboDetailsTextBoxContainer {
-  margin-top: 5px;
-}
+  .collection-button {
+    padding: 5px 10px 5px 10px;
+    border-radius: 8px;
+    border: 1px solid black;
+    cursor: pointer;
+    margin: 5px;
+    background: transparent;
+  }
 
-.amiiboDetailsCollectionButton {
-  padding: 5px 10px 5px 10px;
-  border-radius: 8px;
-  border: 1px solid black;
-  cursor: pointer;
-  margin: 5px;
-  background: transparent;
+  .text-box-container {
+    margin-top: 5px;
+  }
 }
