--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,4 +1,4 @@
-.footerContainer {
+.Footer {
   position: absolute;
   bottom: 0;
   margin-top: 20px;
@@ -10,13 +10,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
 
-.footerDisclaimer {
-  margin: 20px;
-}
+  .disclaimer {
+    margin: 20px;
+  }
 
-.footerTOS {
-  margin: 0px 20px 20px 20px;
-  color: white;
+  .terms-of-service {
+    margin: 0px 20px 20px 20px;
+    color: white;
+  }
 }
