--- a/src/Components/OrderBySelect/OrderBySelect.scss
+++ b/src/Components/OrderBySelect/OrderBySelect.scss
@@ -1,8 +1,9 @@
-.orderBySelectSelect {
+.OrderBySelect {
   border: 1px solid black;
   font-size: medium;
   border-radius: 8px;
   padding: 5px 10px;
   margin: 5px;
   height: fit-content;
+  cursor: pointer;
 }
