--- a/src/Components/Tab/Tab.scss
+++ b/src/Components/Tab/Tab.scss
@@ -1,9 +1,9 @@
-.tabContainer {
+.Tab {
   padding: 3px;
   border: 1px solid rgb(179, 179, 179);
   cursor: pointer;
-}
 
-.tabContainer.selected {
-  border: 1px solid black;
+  &.selected {
+    border: 1px solid black;
+  }
 }
