--- a/src/Components/TabbedTextBox/TabbedTextBox.scss
+++ b/src/Components/TabbedTextBox/TabbedTextBox.scss
@@ -1,20 +1,11 @@
-.TabbedTextBoxContainer {
+.TabbedTextBox {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
 
-.TabbedTextBoxTabsContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.TabbedTextBoxTab {
-  padding: 3px;
-  border: 1px solid rgb(179, 179, 179);
-}
-
-.TabbedTextBoxTab.selected {
-  border: 1px solid black;
+  .tabs-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
 }
