--- a/src/Components/TermsOfServiceAndPrivacy/TermsOfServiceAndPrivacy.scss
+++ b/src/Components/TermsOfServiceAndPrivacy/TermsOfServiceAndPrivacy.scss
@@ -1,8 +1,8 @@
-.TOSAPContainer {
+.TermsOfServiceAndPrivacy {
   padding: 80px 0 22vh 0;
   margin: 0px 20vw 0 20vw;
-}
 
-.TOSAPHeader {
-  margin-top: 0;
+  .header {
+    margin-top: 0;
+  }
 }
