--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,17 @@
 .App {
+  display: flex;
+  flex-direction: column;
   margin-top: 0;
   min-height: 100vh;
   position: relative;
   text-align: center;
+
+  main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+  }
 
   .hidden {
     display: none;
