--- a/src/Components/AmiiboDetails/AmiiboDetails.scss
+++ b/src/Components/AmiiboDetails/AmiiboDetails.scss
@@ -1,8 +1,19 @@
 .AmiiboDetails {
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px 0 22vh 0;
+  min-height: 100%;
+  margin-top: 50px;
+
+  .loading-container {
+    flex: 1;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 
   .background {
     position: absolute;
