--- a/src/Components/AmiiboLibrary/AmiiboLibrary.scss
+++ b/src/Components/AmiiboLibrary/AmiiboLibrary.scss
@@ -1,9 +1,9 @@
 .AmiiboLibrary {
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 60px 0 20vh 0;
-  margin: 0px 20px;
+  margin: 50px 20px 0;
 
   .desktop-controls {
     display: flex;
@@ -62,6 +62,14 @@
       background-color: #eaeaea;
       font-size: 16px;
     }
+  }
+
+  .loading-container {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
   }
 
   .cards-container {
