--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,9 +1,7 @@
 .Footer {
-  position: absolute;
-  bottom: 0;
   margin-top: 20px;
   width: 100%;
-  min-height: 20vh;
+  min-height: 200px;
   background: #494949;
   color: white;
   display: flex;
