--- a/src/Components/HomePage/HomePage.scss
+++ b/src/Components/HomePage/HomePage.scss
@@ -1,6 +1,18 @@
 .HomePage {
-  padding: 50px 0 22vh 0;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
   position: relative;
+  margin-top: 50px;
+
+  .loading-container {
+    flex: 1;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 
   .main-carousel {
     overflow: hidden;
